gcc/testsuite/rust/rustc/ui/type/type-ascription-with-fn-call_dg.rs
//@ run-rustfix
fn main() {
    f()  : // { dg-error "" "" { target *-*-* } }
    f();
}

fn f() {}

